2005-09-05  Dmitriy Anisimkov <anisimkov@ada-ru.org>

	* strm.adb, strm.out:
	Add test for header answer with undefined responce length.
	Add UEH routine for to unexpected exceptions.
	Update copyright years.
	Reorder "with" part.

2005-07-13  Dmitriy Anisimkov <anisimkov@ada-ru.org>

	* zopen.adb:
	Use Get_Free_Port.

2005-07-07  Dmitriy Anisimkov <anisimkov@ada-ru.org>

	* aws.mime:
	Regular expression is in slashes.

2005-07-06  Dmitriy Anisimkov <anisimkov@ada-ru.org>

	* aws.mime:
	New MIME configuration file.

	* tmime.adb, tmime.out:
	Add test for user defined MIME types in aws.mime configuration file.

	* tmime.adb, tmime.out, aws.mime:
	Add test for regular expression in user defined MIME types in aws.mime
	 configuration file.

2005-07-05  Dmitriy Anisimkov <anisimkov@ada-ru.org>

	* afile_pack.adb:
	(CB): Show unsupported URI.

2005-06-23  Pascal Obry  <pascal@obry.net>

	* soap_hotplug_pack_service-client.adb:
	Update to properly compile after name spaces changes.
        Continued work for E614-015.

2005-06-22  Pascal Obry  <pascal@obry.net>

	* wsdl_6.ads, wsdl_6.adb:
        Add echo routines for the SOAP Byte, Unsigned_Long, Unsigned_Int,
         Unsigned_Short, Unsigned_Byte types.
        Part of work for E617-003.

	* wsdl_6_main.adb:
	Add call to the new echo routines to test the SOAP Byte,
         Unsigned_Long, Unsigned_Int, Unsigned_Short, Unsigned_Byte types.
        Note that this test must be synchronized with the corresponding Java
         version, see below.
        Part of work for E617-003.

	* wsdl_6.java:
	Sync with wsdl_6_main as those tests must output the same result.
        Part of work for E617-003.

	* wsdl_6_main.out:
	Update expected output.
        Part of work for E617-003.

2005-06-15  Pascal Obry  <pascal@obry.net>

	* wsdl_6.java:
	Document the way to generate the sources using wsdl2aws.
	Fix build procedure in comment to conform to new code generator.
	Fix code to conform to new code generator.