@@ -1,3 +1,8 @@
+2005-09-06  Dmitriy Anisimkov <anisimkov@ada-ru.org>
+
+	* spair.adb, spair_sec.adb, spair.out, spair_sec.out, spair_proc.adb:
+	New regression test for connected socket pair creation.
+
 2005-09-05  Dmitriy Anisimkov <anisimkov@ada-ru.org>
 
 	* strm.adb, strm.out:
